--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,14 +13,13 @@
 /*-----------------------------------*\
   #CUSTOM PROPERTY
 \*-----------------------------------*/
-
 :root {
 
   /**
    * colors
    */
 
-  --russian-violet: hsl(269, 36%, 22%);
+  --russian-violet: #4B6CFA;
   --dark-purple: hsl(268, 22%, 15%);
   --eerie-black: hsl(240, 4%, 10%);
   --davys-gray: hsl(0, 0%, 34%);
@@ -168,13 +167,13 @@ body {
 }
 
 .btn-primary,
-.btn-secondary:is(:hover, :focus) { background-color: var(--pumpkin); }
+.btn-secondary:is(:hover, :focus) { background-color:#1A237E ; }
 
 .btn-primary:is(:hover, :focus),
-.btn-secondary { background-color: var(--russian-violet); }
+.btn-secondary { background-color:#1A237E; }
 
 .btn-outline {
-  --color: var(--pumpkin);
+  --color: #1A237E;
   --width: 100%;
   text-align: center;
   font-weight: var(--fw-500);
@@ -182,14 +181,14 @@ body {
 }
 
 .btn-outline:is(:hover, :focus) {
-  background-color: var(--pumpkin);
+  background-color: #6582FD;
   color: var(--white);
 }
 
 .section { padding-block: var(--section-padding); }
 
 .section-subtitle {
-  color: var(--pumpkin);
+  color: #dfe1ee;
   font-size: var(--fs-3);
   margin-block-end: 5px;
 }
@@ -290,7 +289,7 @@ body {
 }
 
 .nav-toggle-btn {
-  background-color: var(--pumpkin);
+  background-color: #1A237E ;
   color: var(--white);
   font-size: 35px;
   padding: 2px 8px;
@@ -329,7 +328,7 @@ body {
   transition: var(--transition-1);
 }
 
-.navbar-link:is(:hover, :focus, .active) { color: var(--pumpkin); }
+.navbar-link:is(:hover, :focus, .active) { color: #1A237E; }
 
 .navbar .btn { margin-block: 8px; }
 
@@ -353,6 +352,13 @@ body {
 
 .hero .section-text { margin-block-end: 30px; }
 
+.hero-banner{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+
+}
 
 
 
@@ -372,7 +378,6 @@ body {
   position: relative;
   transition: var(--transition-2);
 }
-
 .features-item::before {
   content: "";
   position: absolute;
@@ -397,7 +402,7 @@ body {
 }
 
 .features-card .card-icon {
-  color: var(--pumpkin);
+  color: #1A237E;
   font-size: 35px;
   max-width: max-content;
   margin-inline: auto;
@@ -431,7 +436,7 @@ body {
 }
 
 .about-item .item-icon {
-  background-color: var(--pumpkin);
+  background-color: #1A237E;
   color: var(--white);
   font-size: 20px;
   padding: 12px;
@@ -521,7 +526,7 @@ body {
 .blog-card .card-meta-item { gap: 6px; }
 
 .blog-card .card-meta-item ion-icon {
-  color: var(--pumpkin);
+  color: #1A237E;
   font-size: var(--fs-5);
 }
 
@@ -531,7 +536,7 @@ body {
 
 .blog-card .card-title { transition: var(--transition-1); }
 
-.blog-card .card-title:is(:hover, :focus) { color: var(--pumpkin); }
+.blog-card .card-title:is(:hover, :focus) { color: #1A237E; }
 
 
 
@@ -563,7 +568,7 @@ body {
 }
 
 .social-link:is(:hover, :focus) {
-  background-color: var(--pumpkin);
+  background-color: #1A237E;
   color: var(--white);
   transform: translateY(-2px);
 }
@@ -584,7 +589,7 @@ body {
 
 .footer-link:is(:hover, :focus),
 .footer-item .item-link:not(.address):is(:hover, :focus) {
-  color: var(--pumpkin);
+  color: #1A237E;
 }
 
 .footer-item {
@@ -596,7 +601,7 @@ body {
 
 .footer-item ion-icon {
   flex-shrink: 0;
-  color: var(--pumpkin);
+  color: #1A237E;
   font-size: 17px;
   margin-block-start: 2px;
 }
@@ -633,7 +638,7 @@ body {
   position: fixed;
   bottom: 30px;
   right: -36px;
-  background-color: var(--pumpkin);
+  background-color: #1A237E;
   color: var(--white);
   padding: 10px;
   border-radius: 50%;
